--- a/config/loki-config-s3.yml
+++ b/config/loki-config-s3.yml
@@ -11,11 +11,11 @@ ingester:
         store: inmemory
       replication_factor: 1
     final_sleep: 0s
-  chunk_idle_period: 5m       # Any chunk not receiving new logs in this time will be flushed (set very low just to push data into s3 exampe)
-  max_chunk_age: 10m           # All chunks will be flushed when they hit this age, default is 1h
-  chunk_target_size: 1048576  # Loki will attempt to build chunks up to 1.5MB, flushing first if chunk_idle_period or max_chunk_age is reached first
-  chunk_retain_period: 30s    # Must be greater than index read cache TTL if using an index cache (Default index read cache TTL is 5m)
-  max_transfer_retries: 0     # Chunk transfers disabled
+  chunk_idle_period: 5m # Any chunk not receiving new logs in this time will be flushed (set very low just to push data into s3 exampe)
+  max_chunk_age: 10m # All chunks will be flushed when they hit this age, default is 1h
+  chunk_target_size: 1048576 # Loki will attempt to build chunks up to 1.5MB, flushing first if chunk_idle_period or max_chunk_age is reached first
+  chunk_retain_period: 30s # Must be greater than index read cache TTL if using an index cache (Default index read cache TTL is 5m)
+  max_transfer_retries: 0 # Chunk transfers disabled
 
 schema_config:
   configs:
@@ -34,8 +34,8 @@ storage_config:
     cache_location: /tmp/loki/boltdb-cache
 
   aws:
-   s3: s3://minio123:minio456@minio.:9000/loki
-   s3forcepathstyle: true
+    s3: s3://minio123:minio456@minio.:9000/loki
+    s3forcepathstyle: true
 
 compactor:
   working_directory: /tmp/loki/compactor
@@ -44,6 +44,7 @@ compactor:
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  split_queries_by_interval: 15m
 
 chunk_store_config:
   max_look_back_period: 336h
@@ -55,7 +56,7 @@ table_manager:
 query_range:
   align_queries_with_step: true
   max_retries: 5
-  split_queries_by_interval: 15m
+  # split_queries_by_interval: 15m
   parallelise_shardable_queries: true
   cache_results: true
 
