--- a/docker-compose-filesystem.yml
+++ b/docker-compose-filesystem.yml
@@ -13,14 +13,14 @@ services:
     networks:
       loki: null
     ports:
-    - protocol: tcp
-      published: 3000
-      target: 3000
-    restart: always
+      - protocol: tcp
+        published: 3000
+        target: 3000
+    restart: unless-stopped
     volumes:
-    - ./config/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
-    - ./config/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
-    - ./config/grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - ./config/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
+      - ./config/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
+      - ./config/grafana/dashboards:/var/lib/grafana/dashboards:ro
   loki:
     command: -config.file=/etc/loki/loki-config.yml
     container_name: loki
@@ -28,12 +28,12 @@ services:
     networks:
       loki: null
     ports:
-    - protocol: tcp
-      published: 3100
-      target: 3100
-    restart: always
+      - protocol: tcp
+        published: 3100
+        target: 3100
+    restart: unless-stopped
     volumes:
-    - ./config/loki-config-filesystem.yml:/etc/loki/loki-config.yml:ro
+      - ./config/loki-config-filesystem.yml:/etc/loki/loki-config.yml:ro
   promtail:
     command: -config.file=/etc/promtail/promtail-config.yml
     container_name: promtail
@@ -41,31 +41,31 @@ services:
     networks:
       loki: null
     ports:
-    - protocol: tcp
-      published: 1514
-      target: 1514
-    - protocol: tcp
-      published: 9080
-      target: 9080
-    restart: always
+      - protocol: tcp
+        published: 1514
+        target: 1514
+      - protocol: tcp
+        published: 9080
+        target: 9080
+    restart: unless-stopped
     volumes:
-    - ./config/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
+      - ./config/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
   syslog-ng:
     command: -edv
     container_name: syslog-ng
     depends_on:
-    - promtail
+      - promtail
     image: balabit/syslog-ng:latest
     networks:
       loki: null
     ports:
-    - protocol: udp
-      published: 514
-      target: 514
-    - protocol: tcp
-      published: 601
-      target: 601
-    restart: always
+      - protocol: udp
+        published: 514
+        target: 514
+      - protocol: tcp
+        published: 601
+        target: 601
+    restart: unless-stopped
     volumes:
-    - ./config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
-version: '3.3'
+      - ./config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
+version: "3.3"
