--- a/docker-compose-without-monitoring.yml
+++ b/docker-compose-without-monitoring.yml
@@ -13,29 +13,29 @@ services:
     networks:
       loki: null
     ports:
-    - protocol: tcp
-      published: 3000
-      target: 3000
-    restart: always
+      - protocol: tcp
+        published: 3000
+        target: 3000
+    restart: unless-stopped
     volumes:
-    - ./config/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
-    - ./config/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
-    - ./config/grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - ./config/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
+      - ./config/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
+      - ./config/grafana/dashboards:/var/lib/grafana/dashboards:ro
   loki:
     command: -config.file=/etc/loki/loki-config.yml
     container_name: loki
     depends_on:
-    - minio
+      - minio
     image: grafana/loki:2.3.0
     networks:
       loki: null
     ports:
-    - protocol: tcp
-      published: 3100
-      target: 3100
-    restart: always
+      - protocol: tcp
+        published: 3100
+        target: 3100
+    restart: unless-stopped
     volumes:
-    - ./config/loki-config-s3.yml:/etc/loki/loki-config.yml:ro
+      - ./config/loki-config-s3.yml:/etc/loki/loki-config.yml:ro
   minio:
     command: -c 'mkdir -p /data/loki && /usr/bin/docker-entrypoint.sh minio server /data'
     container_name: minio
@@ -48,18 +48,18 @@ services:
       interval: 30s
       retries: 3
       test:
-      - CMD
-      - curl
-      - -f
-      - http://localhost:9000/minio/health/live
+        - CMD
+        - curl
+        - -f
+        - http://localhost:9000/minio/health/live
       timeout: 20s
     image: minio/minio:latest
     networks:
       loki: null
     ports:
-    - published: 9000
-      target: 9000
-    restart: always
+      - published: 9000
+        target: 9000
+    restart: unless-stopped
   promtail:
     command: -config.file=/etc/promtail/promtail-config.yml
     container_name: promtail
@@ -67,31 +67,31 @@ services:
     networks:
       loki: null
     ports:
-    - protocol: tcp
-      published: 1514
-      target: 1514
-    - protocol: tcp
-      published: 9080
-      target: 9080
-    restart: always
+      - protocol: tcp
+        published: 1514
+        target: 1514
+      - protocol: tcp
+        published: 9080
+        target: 9080
+    restart: unless-stopped
     volumes:
-    - ./config/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
+      - ./config/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
   syslog-ng:
     command: -edv
     container_name: syslog-ng
     depends_on:
-    - promtail
+      - promtail
     image: balabit/syslog-ng:latest
     networks:
       loki: null
     ports:
-    - protocol: udp
-      published: 514
-      target: 514
-    - protocol: tcp
-      published: 601
-      target: 601
-    restart: always
+      - protocol: udp
+        published: 514
+        target: 514
+      - protocol: tcp
+        published: 601
+        target: 601
+    restart: unless-stopped
     volumes:
-    - ./config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
-version: '3.3'
+      - ./config/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
+version: "3.3"
